--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "prettier --check \"src/**/*.{ts,js}\""
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0"
+    "canvas-confetti": "^1.2.0",
+    "html2pdf.js": "^0.9.0"
   },
   "devDependencies": {
     "@snowpack/plugin-typescript": "^1.2.1",
